# RetrievalLab

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
backend/: cli.py  main.py
backend/agents/: retrieval_agent.py
backend/api/v1/endpoints/: agent.py  corpus.py  eval.py  health.py  retrieve.py
backend/db/: base.py
backend/models/: corpus.py  experiment.py
backend/services/: corpus_forge.py  embed_hub.py  index_registry.py  observe_lab.py  retriever_core.py
backend/utils/: storage.py
config/: settings.py
corpus/chunkers/: chunk_engine.py
corpus/loaders/: base_loader.py  loader_registry.py  pdf_loader.py  text_loader.py
data/seeds/finance/: sample.txt
data/seeds/healthcare/: sample.txt
data/seeds/legal/: sample.txt
docs/: FRONTEND_SETUP.md  MAC_SETUP.md  RESEARCH_FINDINGS.md
eval/adversarial/: harness.py
eval/benchmarks/: beir_runner.py
eval/metrics/: mlflow_tracker.py  ragas_evaluator.py  retrieval_metrics.py
eval/reports/: report_forge.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: AdversarialVisualizer.tsx  MetricStat.tsx  ModeComparisonChart.tsx  PipelineDiagram.tsx  RetrievalModeDemo.tsx
frontend/src/components/eval/: EvalEngineIntro.tsx
frontend/src/components/landing/: BuiltWithSection.tsx  DifferentiatorsSection.tsx  Hero.tsx  HowItWorksSection.tsx  MetricsShowcase.tsx  ProblemSection.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: CountUp.tsx  MetricCard.tsx
frontend/src/hooks/: useCountUp.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AdversarialPage.tsx  AgentPage.tsx  CorpusPage.tsx  Dashboard.tsx  EvalPage.tsx  MetricsPage.tsx  RetrievalPage.tsx
infra/docker/: docker-compose.yml  init_db.sql
tests/integration/: test_corpus_pipeline.py
tests/unit/: test_chunk_engine.py  test_loaders.py  test_retrieval_metrics.py
