# =============================================================================
# RetrievalLab — pyproject.toml
# =============================================================================
# PURPOSE : Single source of truth for Python project metadata, dependencies,
#           and tool configuration (Ruff, mypy, pytest, coverage).
#
# WHAT THIS FILE DOES:
#   • Declares the project as an installable Python package (PEP 517/518).
#   • Pins all dependencies so every developer and CI run gets the same env.
#   • Configures Ruff (linter), mypy (type checker), pytest, and coverage.
#   • Exposes `retrievallab` as a CLI entry point.
#
# HOW TO USE:
#   pip install -e ".[dev]"    # install package + dev deps (editable mode)
#   ruff check .               # lint
#   mypy .                     # type-check
#   pytest                     # run all tests
# =============================================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "retrievallab"
version     = "0.1.0"
description = "Cross-industry retrieval research platform — benchmark, stress-test, and advance RAG systems"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

authors = [
  { name = "Aastha", email = "aastha@retrievallab.ai" },
]

keywords = [
  "rag", "retrieval", "nlp", "information-retrieval",
  "benchmarking", "llm", "embeddings", "langchain"
]

# ---------------------------------------------------------------------------
# CORE RUNTIME DEPENDENCIES
# Pinned to minor version to balance stability with security patches.
# ---------------------------------------------------------------------------
dependencies = [
  # ── Web framework ──────────────────────────────────────────────────────
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "python-multipart>=0.0.9",          # file upload support in FastAPI

  # ── Database ───────────────────────────────────────────────────────────
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.29,<0.30",              # async PostgreSQL driver
  "alembic>=1.13,<1.14",             # schema migrations
  "psycopg2-binary>=2.9,<3.0",       # sync driver (for Alembic CLI)

  # ── Cache / Queue ──────────────────────────────────────────────────────
  "redis[hiredis]>=5.0,<6.0",
  "celery[redis]>=5.4,<6.0",

  # ── Object storage ─────────────────────────────────────────────────────
  "boto3>=1.34,<2.0",
  "minio>=7.2,<8.0",

  # ── Document parsing ───────────────────────────────────────────────────
  "pymupdf>=1.24,<2.0",              # PDF text + image extraction
  "python-docx>=1.1,<2.0",          # DOCX parsing
  "beautifulsoup4>=4.12,<5.0",       # HTML parsing
  "lxml>=5.2,<6.0",                  # fast HTML/XML parser
  "unstructured[pdf,docx]>=0.15,<0.16",  # layout-aware parsing

  # ── NLP ────────────────────────────────────────────────────────────────
  "spacy>=3.7,<4.0",
  "nltk>=3.8,<4.0",
  "tiktoken>=0.7,<1.0",              # OpenAI tokenizer (BPE)

  # ── Embeddings & ML ────────────────────────────────────────────────────
  "sentence-transformers>=3.0,<4.0",
  "torch>=2.3,<3.0",                 # required by sentence-transformers
  "transformers>=4.44,<5.0",
  "scikit-learn>=1.5,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",

  # ── Retrieval frameworks ───────────────────────────────────────────────
  "langchain>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-anthropic>=0.2,<0.3",
  "langgraph>=0.2,<0.3",
  "llama-index>=0.11,<0.12",
  "rank-bm25>=0.2,<0.3",

  # ── Vector databases ───────────────────────────────────────────────────
  "faiss-cpu>=1.8,<2.0",             # swap for faiss-gpu on GPU machines
  "chromadb>=0.5,<0.6",
  "pgvector>=0.3,<0.4",
  "qdrant-client>=1.11,<2.0",
  "weaviate-client>=4.7,<5.0",
  "elasticsearch>=8.15,<9.0",

  # ── LLM providers ──────────────────────────────────────────────────────
  "anthropic>=0.36,<1.0",
  "openai>=1.50,<2.0",
  "cohere>=5.9,<6.0",

  # ── Evaluation ─────────────────────────────────────────────────────────
  "ragas>=0.2,<0.3",
  "deepeval>=1.4,<2.0",
  "mlflow>=2.16,<3.0",
  "optuna>=3.6,<4.0",

  # ── Observability ──────────────────────────────────────────────────────
  "opentelemetry-sdk>=1.27,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
  "prometheus-client>=0.21,<1.0",
  "structlog>=24.4,<25.0",

  # ── Config & utilities ─────────────────────────────────────────────────
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "python-dotenv>=1.0,<2.0",
  "typer[all]>=0.13,<1.0",           # CLI framework
  "rich>=13.8,<14.0",                # terminal pretty-printing
  "httpx>=0.27,<1.0",                # async HTTP client
  "tenacity>=9.0,<10.0",             # retry logic
  "orjson>=3.10,<4.0",              # fast JSON serialization
  "python-jose[cryptography]>=3.3,<4.0",  # JWT auth
  "passlib[bcrypt]>=1.7,<2.0",      # password hashing
]

# ---------------------------------------------------------------------------
# DEVELOPMENT / TEST EXTRAS
# Install with: pip install -e ".[dev]"
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.14,<4.0",
  "httpx>=0.27,<1.0",               # for TestClient
  "faker>=28.0,<30.0",              # synthetic test data
  "hypothesis>=6.112,<7.0",         # property-based testing
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "pre-commit>=3.8,<4.0",
  "ipykernel>=6.29,<7.0",           # Jupyter kernel for notebooks
  "matplotlib>=3.9,<4.0",           # Pareto plots in notebooks
  "umap-learn>=0.5,<1.0",           # embedding visualization
]

# ---------------------------------------------------------------------------
# CLI ENTRY POINT
# After `pip install -e .`, the `retrievallab` command is available globally.
# ---------------------------------------------------------------------------
[project.scripts]
retrievallab = "backend.cli:app"

# ---------------------------------------------------------------------------
# TOOL: Ruff (linter + formatter, replaces flake8/black/isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["backend", "corpus", "eval", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # FastAPI Depends() calls in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "corpus", "eval"]

# ---------------------------------------------------------------------------
# TOOL: mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
strict                 = false    # set true once full type coverage achieved
ignore_missing_imports = true     # some libs lack stubs
disallow_untyped_defs  = true
warn_return_any        = true
warn_unused_ignores    = true

# ---------------------------------------------------------------------------
# TOOL: pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode   = "auto"           # auto-detect async test functions
testpaths      = ["tests"]
addopts        = "-v --tb=short --cov=backend --cov=corpus --cov=eval --cov-report=term-missing"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# TOOL: coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source  = ["backend", "corpus", "eval"]
omit    = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 70              # fail CI if coverage drops below 70%

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"tests/**" = ["F841", "F821"]
"eval/reports/report_forge.py" = ["E701", "F841"]
"backend/cli.py" = ["F821"]
"eval/metrics/mlflow_tracker.py" = ["F821", "B904"]
"backend/services/retriever_core.py" = ["F821"]
"backend/services/embed_hub.py" = ["B904", "B905"]
"backend/services/index_registry.py" = ["B904", "B905"]
"backend/services/observe_lab.py" = ["F401"]
"backend/api/v1/endpoints/corpus.py" = ["B904"]
"backend/api/v1/endpoints/retrieve.py" = ["B904", "SIM102"]
"corpus/loaders/text_loader.py" = ["B904"]
"eval/benchmarks/beir_runner.py" = ["B904"]
"eval/adversarial/harness.py" = ["B904", "B905", "F841"]
"corpus/chunkers/chunk_engine.py" = ["F841"]
"eval/metrics/ragas_evaluator.py" = ["F401", "B904"]
